--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "framer-motion": "^7.6.5",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
