--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "d": "^1.0.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20"
   }
