--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "chakra-otp-input": "^0.3.6",
     "cra-template": "1.2.0",
     "framer-motion": "^7.6.5",
     "jwt-decode": "^3.1.2",
