--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.3",
     "chakra-otp-input": "^0.3.6",
     "cra-template": "1.2.0",
+    "firebase": "^9.14.0",
     "framer-motion": "^7.6.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
