--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.14.0",
     "framer-motion": "^7.6.5",
     "jwt-decode": "^3.1.2",
+    "netlify": "^13.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
