--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-MONGOURL=mongodb+srv://beauty:hub@cluster0.gjxxf5s.mongodb.net/beautyhub;
+MONGOURL=mongodb+srv://beauty:hub@cluster0.gjxxf5s.mongodb.net/beautyhub
